fix: scrollbar global css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,3 +62,20 @@ body {
     --chart-5: 340 75% 55%;
   }
 }
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #3d3d3d;
+  border-radius: 5px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background-color: #878787;
+  border-radius: 5px;
+}
